--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $body-background-color: #2B2E31;
 
 $content-max-width: 800px;
 $content-color: #222;
-$content-background-color: #fff;
+$content-background-color: #0A121B;
 
 $brand-colour: #3583d6;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
