--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -6,19 +6,14 @@ html {
 }
 
 body {
-	height: 100%;
-	max-height: 100%;
-	font-family: "Merriweather", serif;
-	letter-spacing: 0.01rem;
-	font-size: 1.8em;
-	line-height: 1.75em;
-	color: #3A4145;
-	font-weight: 400;
-	-webkit-font-feature-settings: 'kern' 1;
-	-moz-font-feature-settings: 'kern' 1;
-	-o-font-feature-settings: 'kern' 1;
-	text-rendering: geometricPrecision;
-}
+	margin: 0;
+	padding: 0;
+	$body-background-color: #333333;
+	color: #f2f2f2;
+	font-size: 16px;
+	line-height: 1.5;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  }
 
 h1,
 h2,
