--- a/css/main.scss
+++ b/css/main.scss
@@ -8,9 +8,9 @@ $body-background-color: #2B2E31;
 
 $content-max-width: 800px;
 $content-color: #222;
-$content-background-color: #f5f5f5;
+$content-background-color: #b3b3b3;
 
-$brand-colour: #3583d6;
+$brand-colour: #008000;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
