--- a/css/main.scss
+++ b/css/main.scss
@@ -8,14 +8,14 @@ $body-background-color: #2B2E31;
 
 $content-max-width: 800px;
 $content-color: #222;
-$content-background-color: #b3b3b3;
+$content-background-color: #ccccb3;
 
 $brand-colour: #008000;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
 $nav-header-height: 60px;
-$nav-background-color: #f5f5f5;
+$nav-background-color: #008000;
 $nav-width: 300px;
 
 $space: 20px;
