--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $body-background-color: #2B2E31;
 
 $content-max-width: 800px;
 $content-color: #222;
-$content-background-color: #ccccb3;
+$content-background-color: #e1e1d0;
 
 $brand-colour: #008000;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
