--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -78,12 +78,12 @@ h6 {
 }
 
 a {
-	color: #4A4A4A;
+	color: #ffffff;
 	transition: color 0.2s ease;
 }
 
 a:hover {
-	color: #111;
+	color: #ffff00;
 }
 
 p,
@@ -154,7 +154,7 @@ kbd {
 	margin-bottom: 0.4em;
 	padding: 1px 8px;
 	border: #CCC 1px solid;
-	color: #ffffff;
+	color: #666;
 	text-shadow: #FFF 0 1px 0;
 	font-size: 0.9em;
 	font-weight: 700;
