--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -230,7 +230,7 @@ nav > ul {
 
 .nav-item {
 	display: block;
-	font-family: "Open Sans", sans-serif;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 	line-height: 1;
 	margin: 0;
 
@@ -243,17 +243,18 @@ nav > ul {
 	}
 
 	> a {
-		color: #666;
+		color: #ffffff;
 		text-decoration: none;
 		font-size: 1.4rem;
-		padding: $space / 2 0 $space / 2 $space * 2;
+		padding: 0 0 $space / 2 $space * 2;
 		display: block;
 	}
 
 	&.current > a,
 	> a:active,
 	> a:hover {
-		color: #111;
+		color: #ffff00;
+		font-weight: bold;
 	}
 
 	&.top-level > a {
