--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -78,12 +78,12 @@ h6 {
 }
 
 a {
-	color: #ffffff;
+	color: #4A4A4A;
 	transition: color 0.2s ease;
 }
 
 a:hover {
-	color: #ffff00;
+	color: #111;
 }
 
 p,
