--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -230,7 +230,7 @@ nav > ul {
 
 .nav-item {
 	display: block;
-	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	font-family: Verdana, sans-serif;
 	line-height: 1;
 	margin: 0;
 
@@ -246,7 +246,7 @@ nav > ul {
 		color: #ffffff;
 		text-decoration: none;
 		font-size: 1.4rem;
-		padding: 0 0 $space / 2 $space * 2;
+		padding: $space / 4 0  $space / 4 $space * 2;
 		display: block;
 	}
 
@@ -254,7 +254,7 @@ nav > ul {
 	> a:active,
 	> a:hover {
 		color: #ffff00;
-		font-weight: bold;
+		background-color:#2EA620;
 	}
 
 	&.top-level > a {
