--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@ $content-max-width: 800px;
 $content-color: #222;
 $content-background-color: #ffffff;
 
-$brand-colour: #008000;
+$brand-colour: #2A9DF4;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
