--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
 $nav-header-height: 60px;
-$nav-background-color: #008000;
+$nav-background-color: #2A9DF4;
 $nav-width: 300px;
 
 $space: 20px;
