--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -454,7 +454,7 @@ img {
 		box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.2);
 
 		&:hover {
-			background-color: #f4d525;
+			background-color: #2A9DF4;
 			color: #333;
 		}
 	}
