--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -254,7 +254,7 @@ nav > ul {
 	> a:active,
 	> a:hover {
 		color: #ffff00;
-		background-color:#2EA620;
+		background-color:#2A9DF4;
 	}
 
 	&.top-level > a {
