--- a/css/main.scss
+++ b/css/main.scss
@@ -10,12 +10,12 @@ $content-max-width: 800px;
 $content-color: #222;
 $content-background-color: #ffffff;
 
-$brand-colour: #2A9DF4;
+$brand-colour: #808080;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
 $nav-header-height: 60px;
-$nav-background-color: #2A9DF4;
+$nav-background-color: #808080;
 $nav-width: 300px;
 
 $space: 20px;
