--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -254,7 +254,7 @@ nav > ul {
 	> a:active,
 	> a:hover {
 		color: #ffff00;
-		background-color:#2A9DF4;
+		background-color:#e6e6e6;
 	}
 
 	&.top-level > a {
@@ -454,7 +454,7 @@ img {
 		box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.2);
 
 		&:hover {
-			background-color: #2A9DF4;
+			background-color: #e6e6e6;
 			color: #333;
 		}
 	}
