--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -36,7 +36,7 @@ p > code {
 	white-space: nowrap;
 }
 
-table > code {
+td > code {
 	padding: 4px 6px;
 	white-space: nowrap;
 	background-color: coral;
