--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -33,7 +33,7 @@ blockquote > code,
 li > code,
 td > code,
 p > code {
-	background-color: ForestGreen;
+	background-color: DarkGreen;
 	padding: 4px 6px;
 	white-space: nowrap;
 }
