--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -34,6 +34,7 @@ li > code,
 td > code,
 p > code {
 	background-color: DarkGreen;
+	font-size: 1.8em;
 	padding: 4px 6px;
 	white-space: nowrap;
 }
